--- a/codefresh.yml
+++ b/codefresh.yml
@@ -3,7 +3,7 @@ steps:
   build-the-image:
     type: build
     description: Builds my service
-    image_name: pooka27/otoproducts
+    image_name: apaukner/otoproducts
     tag: ${{CF_SHORT_REVISION}}
   push-the-image:
     type: push
